--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 time api
+  p a small api for accesing times using various formats...
+
+  br 
+  hr
+  br
+    
+  h2 endpoints
